--- a/assets/styles/partials/_variables.scss
+++ b/assets/styles/partials/_variables.scss
@@ -1,6 +1,7 @@
 $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Gibson', sans-serif;
 $white-color: #fff;
+$black-color: #09142F;
 $primary-color: #3E6DDA;
 $purple-color: #7B61FF;
 $red-color: #EC2B08;
