--- a/assets/styles/partials/_base.scss
+++ b/assets/styles/partials/_base.scss
@@ -6,6 +6,7 @@
 
     --primary-color: #{$primary-color};
     --white-color: #{$white-color};
+    --black-color: #{$black-color};
     --purple-color: #{$purple-color};
     --red-color: #{$red-color};
 
