--- a/assets/styles/partials/_content.scss
+++ b/assets/styles/partials/_content.scss
@@ -13,6 +13,8 @@
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px 0px 0px 8px;
     padding: 24px 0;
+    transition: all .3s ease;
+    z-index: 2;
 
     &__title{
         padding: 0 40px;
@@ -210,6 +212,10 @@
             thead{
                 position: sticky;
                 top: 0;
+                border-bottom: 1px solid var(--bright-gray-4-color);
+                & tr{
+                    // border-bottom: 1px solid var(--bright-gray-4-color);
+                }
             }
 
             tr{
@@ -236,10 +242,11 @@
                 vertical-align: middle;
                 text-align: start;
             }
-            tr:not(:last-child){
+            tbody {
+                & tr:not(:last-child){
                 border-bottom: 1px solid var(--bright-gray-4-color);
+                }
             }
-
             &__checkbox{
                 input{
                     width: 16px;
@@ -275,6 +282,7 @@
                 }
 
                 .tag{
+                    height: 20px;
                     &--btn{
                         padding: 2px 8px;
                         background-color: var(--bright-gray-4-color);
@@ -459,10 +467,36 @@
             &-wrapper{
                 display: flex;
                 align-items: center;
-                column-gap: 4px;
+                column-gap: 8px;
 
-                &:not(:last-child){
-                    margin-bottom: 12px;
+                // &:not(:last-child){
+                //     margin-bottom: 12px;
+                // }
+
+                &> label{
+                    font-weight: 400;
+                    font-size: 1.4rem;
+                    line-height: 2rem;
+                    color: var(--black-color);
+                }
+            }
+
+
+            &.form__radio{
+                row-gap: 20px;
+                // &> label{
+                //     margin-bottom: 12px;
+                // }
+
+                &:not(last-child){
+                    margin-bottom: 8px;
+                }
+
+                & input{
+                    width: 16px;
+                    height: 16px;
+                    margin: 0;
+                    cursor: pointer;
                 }
             }
         }
