--- a/assets/styles/partials/_sidebar.scss
+++ b/assets/styles/partials/_sidebar.scss
@@ -1,7 +1,8 @@
 
 .sidebar{
     display: flex;
-    width: calc(var(--main-menu-width) + var(--sub-menu-width));
+    // width: calc(var(--main-menu-width) + var(--sub-menu-width));
+    position: relative;
 
     &__menu{
         display: flex;
@@ -11,6 +12,7 @@
         width: var(--main-menu-width);
         padding: 8px;
         background-color: var(--white-color);
+        z-index: 2;
 
 
         &-list{
@@ -117,12 +119,35 @@
             }
         }
     }
+
+    &__collapse{
+        position: absolute;
+        right: 0;
+        top: 14px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform: translateX(50%);
+        border-radius: 20px;
+        background-color: var(--white-color);
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
+        z-index: 3;
+
+        &:hover{
+            background-color: var(--bright-gray-4-color);
+        }
+    }
     .submenu{
         flex: 1;
         display: flex;
         flex-direction: column;
         width: var(--sub-menu-width);
         background-color: var(--bright-gray-5-color);
+        transition: all .3s ease;
+        opacity: 1;
+        visibility: visible;
 
         &__heading{
             font-weight: 700;
@@ -141,7 +166,8 @@
             overflow: hidden;
 
             ul{
-                overflow-y: scroll;
+                overflow-y: auto;
+                overflow-x: hidden;
                 height: 100%;
 
                 &::-webkit-scrollbar-track
@@ -166,6 +192,7 @@
         }
 
         &__item{
+            min-width: 198px;
             a{
                 display:block;
                 width: 100%;
@@ -191,6 +218,13 @@
             &:not(:last-child){
                 margin-bottom: 8px;
             }
+        }
+
+        &.hide{
+            // transform: translateX(-100%);
+            width: 0;
+            opacity: 0;
+            visibility: hidden;
         }
     }
 }
