change classname btn collapse

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -464,7 +464,7 @@ body {
   transition: all .3s ease;
 }
 
-.sidebar__collapse.hide img {
+.sidebar__collapse.rotate img {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
 }
