--- a/assets/styles/partials/_sidebar.scss
+++ b/assets/styles/partials/_sidebar.scss
@@ -144,7 +144,7 @@
             transition: all .3s ease;
         }
 
-        &.hide{
+        &.rotate{
             & img{
                 transform: rotate(180deg)
             }
