fix scroll sidebar css

--- a/assets/styles/partials/_content.scss
+++ b/assets/styles/partials/_content.scss
@@ -295,6 +295,7 @@
 
                 .tag{
                     height: 20px;
+                    display: flex;
                     &--btn{
                         padding: 2px 8px;
                         background-color: var(--bright-gray-4-color);
