--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -486,6 +486,7 @@ body {
   transition: all .3s ease;
   opacity: 1;
   visibility: visible;
+  position: relative;
 }
 
 .sidebar .submenu__heading {
@@ -502,7 +503,7 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding: 32px 16px;
+  padding: 32px 0 32px 16px;
   width: 100%;
   overflow: hidden;
 }
@@ -532,6 +533,7 @@ body {
 
 .sidebar .submenu__item {
   min-width: 198px;
+  padding-right: 10px;
 }
 
 .sidebar .submenu__item a {
@@ -931,6 +933,9 @@ body {
 
 .content .main .table__title .tag {
   height: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .content .main .table__title .tag--btn {
