--- a/assets/styles/partials/_sidebar.scss
+++ b/assets/styles/partials/_sidebar.scss
@@ -159,6 +159,7 @@
         transition: all .3s ease;
         opacity: 1;
         visibility: visible;
+        position: relative;
 
         &__heading{
             font-weight: 700;
@@ -172,7 +173,7 @@
 
         &__list{
             flex: 1;
-            padding: 32px 16px;
+            padding: 32px 0 32px 16px;
             width: 100%;
             overflow: hidden;
 
@@ -204,6 +205,7 @@
 
         &__item{
             min-width: 198px;
+            padding-right: 10px;
             a{
                 display:block;
                 width: 100%;
