--- a/assets/styles/partials/_base.scss
+++ b/assets/styles/partials/_base.scss
@@ -96,6 +96,6 @@ body{
 
 @font-face {
     font-family: Gibson;
-    src: url('/assets/fonts/Gibson-SemiBold/Gibson-SemiBold.ttf');
+    src: url('/assets/fonts/Gibson-SemiBold/Gibson-SemiBold.woff');
     font-weight: 600;
 }
