--- a/assets/styles/partials/_base.scss
+++ b/assets/styles/partials/_base.scss
@@ -17,6 +17,7 @@
     --bright-gray-5-color: #{$bright-gray-5-color};
     --dark-gray-1-color: #{$dark-gray-1-color};
     --dark-gray-3-color: #{$dark-gray-3-color};
+    --dark-gray-4-color: #{$dark-gray-4-color};
     --dark-gray-5-color: #{$dark-gray-5-color};
 
     --body-bg: #{$bright-gray-5-color};
