--- a/assets/styles/partials/_variables.scss
+++ b/assets/styles/partials/_variables.scss
@@ -12,6 +12,7 @@ $bright-gray-4-color: #E9E9EC;
 $bright-gray-5-color: #F6F6F8;
 $dark-gray-1-color: #141417;
 $dark-gray-3-color: #3F3F49;
+$dark-gray-4-color: #555562;
 $dark-gray-5-color: #6B6B7B;
 
 $main-menu-width: 88px;
